added new endpoints
